syntax = "proto3";

package agent;

option go_package = "github.com/PipeOpsHQ/pipeops-k8-operator/internal/controller/agent";

service AgentService {
  rpc Authenticate(AuthRequest) returns (AuthResponse);
  rpc Communicate(stream Message) returns (stream Message);
}

message AuthRequest {
  string service_account = 1;
  string token = 2;
}

message AuthResponse {
  string access_token = 1;
  int64 expires_at = 2;
}

message Message {
  string from = 1;
  string to = 2;
  string content = 3;
}

message StreamInfo {
  string agent_id = 1;
  string status = 2;
}